// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chip /> correct rendering renders with props iconAfter 1`] = `
<button
  className="pgn__chip pgn__chip-light"
  disabled={false}
  onClick={[Function]}
>
  Chip
  <span
    className="pgn__icon chip-icon-after"
  >
    <svg
      aria-hidden={true}
      fill="none"
      focusable={false}
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        fill="currentColor"
      />
    </svg>
  </span>
</button>
`;

exports[`<Chip /> correct rendering renders with props iconBefore 1`] = `
<button
  className="pgn__chip pgn__chip-light"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="pgn__icon chip-icon-before"
  >
    <svg
      aria-hidden={true}
      fill="none"
      focusable={false}
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        fill="currentColor"
      />
    </svg>
  </span>
  Chip
</button>
`;

exports[`<Chip /> correct rendering renders with props iconBefore and iconAfter 1`] = `
<button
  className="pgn__chip pgn__chip-light"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="pgn__icon chip-icon-before"
  >
    <svg
      aria-hidden={true}
      fill="none"
      focusable={false}
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        fill="currentColor"
      />
    </svg>
  </span>
  Chip
  <span
    className="pgn__icon chip-icon-after"
  >
    <svg
      aria-hidden={true}
      fill="none"
      focusable={false}
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        fill="currentColor"
      />
    </svg>
  </span>
</button>
`;

exports[`<Chip /> correct rendering renders without props 1`] = `
<button
  className="pgn__chip pgn__chip-light"
  disabled={false}
  onClick={[Function]}
>
  Chip
</button>
`;
